force-app/main/default/objects/SuRF_DGX_HOT_Compliance_Trans__c/SuRF_DGX_HOT_Compliance_Trans__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF_DGX_HOT_Compliance_Trans</label>
    <nameField>
        <label>SuRF_DGX_HOT_Compliance_Trans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuRF_DGX_HOT_Compliance_Trans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>