force-app/main/default/objects/SuRF_DGX_HOT_Compliance_Trans__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>