force-app/main/default/objects/SuRF_DGX_HOT_Compliance_Trans__c/fields/Billing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sub_Region__c</fullName>
    <label>Billing_Sub_Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>