force-app/main/default/objects/SuRF_DGX_HOT_Compliance_Trans__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surf_Competency</valueSetName>
    </valueSet>
</CustomField>